@@ -40,13 +40,17 @@ Core and Builtins
 Library
 -------
 
+- email.header.Header was incorrectly encoding folding white space when
+  rfc2047-encoding header values with embedded newlines, leaving them
+  without folding whitespace.  It now uses the continuation_ws, as it
+  does for continuation lines that it creates itself.
+
 - Issue #10827: Changed the rules for 2-digit years.  The time.asctime
   function will now format any year when ``time.accept2dyear`` is
   false and will accept years >= 1000 otherwise.  The year range
   accepted by ``time.mktime`` and ``time.strftime`` is still system
   dependent, but ``time.mktime`` will now accept full range supported
   by the OS.  Conversion of 2-digit years to 4-digit is deprecated.
-
 
 - Issue #7858: Raise an error properly when os.utime() fails under Windows
   on an existing file.
